@@ -4,6 +4,7 @@
 * history: #3092 fixed: crash in history window (Vogel)
 * chat: #3091 fixed: keep indentation in messages (Vogel)
 * gadu: #3101 fixed: save URL of received files in history (Vogel)
+* chat: #3100 fixed: copying emoticons from chat view now works (Vogel)
 
 +++ version 4.0-beta2
 * gadu: #3072 fixed: always use encryption when available (Vogel)
